- API trả về list Booking dựa trên Id của renter cụ thể